--- a/css/form.css
+++ b/css/form.css
@@ -1935,4 +1935,81 @@ html * {
     right: unset;
     left: 6px;
   }
+  .div-radio{
+    display: flex;
+   border: 1px solid rgb(215, 213, 213);
+   border-radius: 3px;
+   justify-content: space-between;
+   padding: 13px 0px;
+   width: 100%;
+  }
+  @media (max-width: 478px) {
+    .div-radio {
+     font-size: 13px;
+     padding: 13px -2px;
+    }
+  }
+  @media (max-width: 459px) {
+    .div-radio {
+  flex-direction: column;
+     font-size: 13px;
+     padding: 13px 13px;
+    }
+  }
+  @media (max-width: 459px) {
+    .dure1 {
+     margin-top: 4px;
+     margin-left: 1rem;
+    }
+  }
+  @media (max-width: 459px) {
+    .dure2 {
+     margin-left: 5rem;
+    }
+  }
+  @media (max-width: 459px) {
+    .dure3 {
+     margin-left: 9rem;
+    }
+  }
+  @media (max-width: 459px) {
+    .dureAutre {
+     margin-left: 13rem;
+    }
+  }
+  @media (max-width: 459px) {
+    .dureLabel {
+     margin: auto;
+    }
+  }
+  @media (max-width: 380px) {
+    .dure1 {
+  margin: 0;
+  margin-top: 4px;
+  }
+}
+@media (max-width: 380px) {
+  .dure2 {
+margin: 0;
+margin-top: 6px;
+}
+}
+@media (max-width: 380px) {
+  .dure3 {
+margin: 0;
+margin-top: 6px;
+}
+}
+@media (max-width: 380px) {
+  .dureAutre {
+margin: 0;
+margin-top: 6px;
+}
+}
+
+
+
+  #radio-other_div{
+    margin-top: 12px;
+  }
   
